// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and matches snapshot with not open and not permanent without crashing 1`] = `
<body
  style=""
>
  <div />
</body>
`;

exports[`renders and matches snapshot with not open and permanent without crashing 1`] = `
<div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-165 makeStyles-drawerPermanent-167"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-166 makeStyles-drawerPaperPermanent-168 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
    >
      <div
        class="MuiBox-root MuiBox-root-214 makeStyles-fullHeight-212 makeStyles-center-211"
      >
        <div
          class="MuiBox-root MuiBox-root-215 makeStyles-center-211"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
          >
            drawer.notLoggedIn.title
          </h5>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
          >
            drawer.notLoggedIn.message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders and matches snapshot with open and not permanent without crashing 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDrawer-root MuiDrawer-modal makeStyles-drawer-1"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-2 MuiDrawer-paperAnchorRight MuiPaper-elevation16"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root-52 makeStyles-fullHeight-50 makeStyles-center-49"
      >
        <div
          class="MuiBox-root MuiBox-root-53 makeStyles-center-49"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
          >
            drawer.notLoggedIn.title
          </h5>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
          >
            drawer.notLoggedIn.message
          </p>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`renders and matches snapshot with open and permanent without crashing 1`] = `
<div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-84 makeStyles-drawerPermanent-86"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-85 makeStyles-drawerPaperPermanent-87 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
    >
      <div
        class="MuiBox-root MuiBox-root-133 makeStyles-fullHeight-131 makeStyles-center-130"
      >
        <div
          class="MuiBox-root MuiBox-root-134 makeStyles-center-130"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
          >
            drawer.notLoggedIn.title
          </h5>
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
          >
            drawer.notLoggedIn.message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
